Update the fade in styles to avoid flicker with the new icons.

--- a/app/data/style.css
+++ b/app/data/style.css
@@ -4,8 +4,8 @@
     visibility: hidden;
 
     content: ".";
-    font-size: 11px;
-    line-height: 10px;
+    font-size: 14px;
+    line-height: 14px;
 }
 
 /* remove placeholder */
